added a form to add new articles

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -13,3 +13,9 @@ html, body {
   font-family: 'Roboto';
   background-color: #fffef7;
 }
+
+.new-article{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 25px;
+}
