--- a/CSS/index.css
+++ b/CSS/index.css
@@ -112,3 +112,8 @@ body {
   font-family: 'Roboto';
   background-color: #fffef7;
 }
+.new-article {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 25px;
+}
